<resources>
    <string name="app_name">Golden Corner</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD2tsuPsR0b-v0gLKyp-h5ol6DNQanF2KE</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_internet_connection">No_nternet connection</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_register">Not Registered Yet? Register Now</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="menu_home">Home</string>
    <string name="off">Cancel</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_about">About</string>
    <string name="title_activity_login">Login</string>
    <string name="phone_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget password?</string>
    <string name="login">Log In</string>
    <string name="login_to_continue">To continue you have to log in</string>
    <string name="new_account_signup">Create New Account</string>
    <string name="account_activation">Account Activation</string>
    <string name="main">Main</string>
    <string name="my_account">My Account</string>
    <string name="branches">Branches</string>
    <string name="latest_products">Latest products</string>
    <string name="offers">Offers</string>
    <string name="Most_requested">Most requested</string>
    <string name="favorites">Favorites</string>
    <string name="addresses">Addresses</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="language_settings">Language Settings</string>
    <string name="about_app">About App</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">logout</string>
    <string name="signup">Signup</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="my_points">My Points</string>
    <string name="save_data">Save Data</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="accept_terms">I agree to the terms and conditions</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="optional">Optional</string>
    <string name="_09665xxxxxxxx">055XXXXXXXX</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">back</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="enter_the_code_sent_to_your_mobile">Enter The Code Sent To Your Mobile</string>
    <string name="activation_code">Activation code</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="enter_confirmation_code_sent_to_your_mobile_number">Enter Confirmation Code Sent To Your Mobile Number</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="did_you_forget_your_password_will_send_confirmation_code_to_you_mobile_number">Did You Forget Your Password, Will send Confirmation Code To You Mobile Number</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="english_language">English Language</string>
    <string name="arabic_language">Arabic Language</string>
    <string name="order_details">Order Details</string>
    <string name="cancel">Continue shopping</string>
    <string name="this_field_is_required">This Field is Required</string>
    <string name="Favorites">Favorites</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="title_activity_ads">Ads activity</string>
    <string name="arabic">العربية</string>
    <string name="en">EN</string>
    <string name="skipp_ar">تخطي</string>
    <string name="skip_en">Skip</string>
    <string name="no_offers_for_this_week">No offers for this week</string>
    <string name="title_activity_branches">Map</string>
    <string name="continue_str">Continue</string>
    <string name="from_you">From you : </string>
    <string name="KM"> KM</string>
    <string name="open_now">Open Now</string>
    <string name="close_now">Close Now</string>
    <string name="select_meal">Select Meal</string>
    <string name="extras">Extras</string>
    <string name="comments">Comments</string>
    <string name="our_valued_customers_rate_our_meals">Our valued customers rate our meals</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="title_home">Home</string>
    <string name="select_evaluation_now">Select Evaluation Now</string>
    <string name="what_your_evaluation_level">What Your Evaluation Level</string>
    <string name="your_comment">Your Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="evaluate_product">Evaluate Product</string>
    <string name="discount_code">Discount</string>
    <string name="select_delivery_time_from_the_branch">Select delivery time from the branch</string>
    <string name="add_discount_code">Add Discount Code</string>
    <string name="select_minutes">Select Minutes</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="add_new_card">add New Card</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="card_number">Card Number</string>
    <string name="cvc_number">CVC Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="add_card">Add Card</string>
    <string name="add_address">Add Address</string>
    <string name="my_addresses">My Addresses</string>
    <string name="address_name">Address Name</string>
    <string name="city">City</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="select_location">Select Location</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="address">Address</string>
    <string name="add_new_address">add New Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="contact_with_driver">Contact with Driver</string>
    <string name="evaluate_order">Evaluate Order</string>
    <string name="new_str">New</string>
    <string name="delivery_driver">Delivery Driver</string>
    <string name="call_driver">Call Driver</string>
    <string name="weak">Weak</string>
    <string name="acceptable">Acceptable</string>
    <string name="average">Average</string>
    <string name="very_good">Very Good</string>
    <string name="excellent">Excellent</string>
    <string name="are_you_satisfied_with_the_delivery_driver">Are you satisfied with the delivery driver ?</string>
    <string name="eating_heat">Eating heat</string>
    <string name="evaluation_questions">Evaluation Questions</string>
    <string name="evaluation">Evaluation</string>
    <string name="receive_from_branch">Receive From Branch</string>
    <string name="deliver_to_address">Deliver To Address</string>
    <string name="choose_saved_address">Choose Saved Address</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="payment_information">Payment Information</string>
    <string name="pay_on_receipt">Pay on receipt</string>
    <string name="pay_on_receipt_mada_card">Pay on receipt mada card</string>
    <string name="order_total">Order Total</string>
    <string name="golden_corner_branches">Golden Corner Branches</string>
    <string name="appropriate_timing_of_receipt">Appropriate timing of receipt</string>
    <string name="no_more_data_to_load">No more data to load</string>
    <string name="about_us">About Us</string>
    <string name="sr"> SR</string>
    <string name="discounted">Discounted</string>
    <string name="menu_sub_categories">Sub Categories</string>
    <string name="calories">Calories: </string>
    <string name="select_language_first">Select a language first !!</string>
    <string name="delete_address">Delete Address</string>
    <string name="address_note">Address Note</string>
    <string name="street">Street</string>
    <string name="login_or_create_new_account_and_try_again">LogIn or create new account and try again</string>
    <string name="select_the_location_on_the_map">Select the location on the map</string>
    <string name="select_you_location">Select You Location</string>
    <string name="select_your_city">Select Your City</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="you_can_add_discount_code">  You can add discount code  </string>
    <string name="add_code">Add code</string>
    <string name="order_note">Order Note</string>
    <string name="total">Total</string>
    <string name="proceed_to_purchase">Proceed to purchase</string>
    <string name="order_summary">Order Summary</string>
    <string name="add_your_order">Add your order</string>
    <string name="shopping_card_is_empty">Shopping Card is Empty</string>
    <string name="search">Search</string>
    <string name="cart">Shopping basket</string>
    <string name="tax">Tax</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="invalid_email">InValid Email</string>
    <string name="accept_terms_and_conditions_please">Accept Terms and Conditions, Please</string>
    <string name="family_name">Family Name</string>
    <string name="password_not_match">Password not match</string>
    <string name="activate_account">Activate Account</string>
    <string name="order_number">Order Number</string>
    <string name="prepared">In kitchen</string>
    <string name="on_the_way">On The Way</string>
    <string name="delivered">Delivered</string>
    <string name="order_date">Order Date</string>
    <string name="confirm">Go to basket</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="are_you_sure_to_cancel_this_order">Are you sure to cancel this order</string>
    <string name="couldnt_share_product_image">Couldn\'t share product</string>
    <string name="add_your_evaluation">Add Your Evaluation</string>
    <string name="comment_cant_be_empty">Comment can\'t be empty</string>
    <string name="no_mobile_number">No mobile number</string>
    <string name="rate_cant_be_zero">Rate can\'t be Zero</string>
    <string name="you_can_add_you_evaluation">You can add you evaluation</string>
    <string name="order_quantity_must_be_at_least">Order quantity must be at least 1</string>
    <string name="successful_message">Data updated successfully!</string>
    <string name="old_phone_number">Old Mobile number</string>
    <string name="new_phone_number">New Mobile number</string>
    <string name="language">Languge</string>
    <string name="evaluation2">Product evaluation</string>
</resources>