<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_main_white_62"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_offers"
        android:icon="@drawable/ic_offers_62"
        android:title="@string/offers" />


    <item
        android:id="@+id/nav_branches"
        android:icon="@drawable/menu_branches_white_62"
        android:title="@string/branches" />


    <item
        android:id="@+id/nav_my_orders_bottom"
        android:icon="@drawable/menu_myorders_white_62"
        android:title="@string/menu_my_orders" />


    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/menuico_person_white_62"
        android:title="@string/my_account" />


</menu>