<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    tools:context="com.golden.goldencorner.ui.languageSetting.LanguageSettingFragment">


    <RadioGroup
        android:id="@+id/langRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <RadioButton
            android:id="@+id/arabicRBtn"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/arabic_language"
            />

        <RadioButton
            android:id="@+id/englishRBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="false"
            android:text="@string/english_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arabicRBtn" />

    </RadioGroup>


    <ImageView
        android:id="@+id/arFlag"
        android:layout_width="70dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="@+id/langRG"
        app:layout_constraintTop_toTopOf="@+id/langRG"
        app:srcCompat="@drawable/saudi_arabia" />
    <ImageView
        android:layout_width="70dp"
        android:layout_height="?attr/actionBarSize"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/arFlag"
        app:layout_constraintEnd_toEndOf="@+id/arFlag"
        app:layout_constraintTop_toBottomOf="@+id/arFlag"
        app:srcCompat="@drawable/america" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/sendBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="?attr/actionBarSize"
        android:background="@drawable/login_button_shape"
        android:clickable="true"
        android:gravity="center"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:text="@string/save_data"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>